--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,2 @@
 
+public_gsheets_url = "https://docs.google.com/spreadsheets/d/18Q3ypNUX9U899qJaQ2_aPNqD-MfO6P3_/edit?usp=sharing&ouid=109400073566661044179&rtpof=true&sd=true"
