--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
 
-public_gsheets_url = "https://docs.google.com/spreadsheets/d/1SAF1HvHAL3iQoq_Kohhuvcmisuh_EXsiipD338mLudI/edit#gid=0"
+public_gsheets_url = "https://docs.google.com/spreadsheets/d/1SAF1HvHAL3iQoq_Kohhuvcmisuh_EXsiipD338mLudI/edit#gid=536283310"
