--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ numpy
 matplotlib
 plotly
 DateTime
-streamlit-extras==0.2.4
-st-annotated-text==3.0.0
-#streamlit-card==0.0.4
+streamlit-extras
+#==0.2.4
+st-annotated-text
+#==3.0.0
+streamlit-card
+#==0.0.4
